--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
 body {
     background-color: #f8f8f8;
     color: #333;
-    font-family: Lato, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
+
 .aaa {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
+    font-family: 'fantasy', cursive;
 }
+
 .aaa img {
     width: 100%;
-}
-.aaa .more_inf {
-    font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
@@ -26,6 +26,7 @@ body {
     width: 500px;
     margin: 0 auto 0;
 }
+
 .task {
     width: 56%;
     display: inline-block;
